--- a/kv-get-started/wrangler.jsonc
+++ b/kv-get-started/wrangler.jsonc
@@ -13,7 +13,7 @@
 	"kv_namespaces": [
 		{
 		"binding": "BINDING_NAME",
-		"id": "42c742476f2945a7b9d6d71912b47b4b"
+		"id": "<ADD YOUR KV NAMESPACEID HERE>"
 		}
 	]
 }
