--- a/workflows/waitForEvent/nextjs-workflow-frontend/package.json
+++ b/workflows/waitForEvent/nextjs-workflow-frontend/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "next": "15.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@opennextjs/cloudflare": "~1.0.0-beta.0 || ^1.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250403.0",
     "@eslint/eslintrc": "^3",
-		"@opennextjs/cloudflare": "~1.0.0-beta.0 || ^1.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
