--- a/d1/query-d1-using-prisma/package.json
+++ b/d1/query-d1-using-prisma/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "predeploy": "wrangler d1 migrations apply DB",
+    "predeploy": "wrangler d1 migrations apply DB --remote",
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
