--- a/workflows/durableAgent/wrangler.jsonc
+++ b/workflows/durableAgent/wrangler.jsonc
@@ -33,7 +33,7 @@
 	"migrations": [
 		{
 			"tag": "v1",
-			"new_classes": ["ResearchAgent"]
+			"new_sqlite_classes": ["ResearchAgent"]
 		}
 	]
 }
