--- a/workflows/durableAgent/tsconfig.worker.json
+++ b/workflows/durableAgent/tsconfig.worker.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
-    "types": ["./worker-configuration.d.ts", "@cloudflare/workers-types"]
+    "types": ["./worker-configuration.d.ts", "@cloudflare/workers-types"],
+    "target": "ES2021"
   },
   "include": ["./worker-configuration.d.ts", "./worker"]
 }
